[package]
name = "codecrafters-dns-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
num = "0.4"
enum_primitive = "*"
tokio = { version = "1.43", features = ["full"] }
